--- a/package.json
+++ b/package.json
@@ -1,9 +1,27 @@
 {
-  "name": "",
-  "version": "",
+  "name": "azf-pdf-generator",
+  "version": "0.1.0",
   "description": "",
-  "scripts" : {
-    "test": "echo \"No tests yet...\""
+  "scripts": {
+    "test": "standard",
+    "standard:fix": "standard --fix",
+    "refresh": "rm -rf node_modules && rm package-lock.json && npm i"
   },
-  "author": ""
+  "author": "",
+  "dependencies": {
+    "@alheimsins/pdf-make": "1.0.9",
+    "@vtfk/document-definitions": "file:../document-definitions",
+    "@vtfk/logger": "2.4.0",
+    "ajv": "6.12.6",
+    "handlebars": "4.7.6",
+    "html-to-pdfmake": "2.1.2",
+    "jsdom": "16.4.0",
+    "markdown-it": "12.0.2",
+    "markdown-it-front-matter": "0.2.3",
+    "pretty-bytes": "5.4.1",
+    "yaml-front-matter": "4.1.0"
+  },
+  "devDependencies": {
+    "standard": "16.0.3"
+  }
 }
