--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -12,7 +12,7 @@ env:
   NODE_VERSION: '12.x'                            # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
-  deploy-to-prod:
+  deploy-to-test:
     runs-on: ubuntu-latest
     steps:
     - name: 'Checkout GitHub Action'
