La til script for deploy

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:lint": "standard",
-    "refresh": "rm -rf node_modules && rm package-lock.json && npm i"
+    "refresh": "rm -rf node_modules && rm package-lock.json && npm i",
+    "deploy:test": "func azure functionapp publish test-func-pdf-api-v1",
+    "deploy:prod": "func azure functionapp publish prod-func-pdf-api-v1"
   },
   "author": "",
   "dependencies": {
