--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "yaml-front-matter": "4.1.1"
   },
   "devDependencies": {
-    "standard": "16.0.3",
+    "@types/jest": "26.0.22",
     "jest": "26.6.3",
-    "@types/jest": "26.0.22"
+    "standard": "16.0.3"
   },
   "standard": {
     "env": [
